font-size smaller on smaller screens

--- a/frontend/source/less/components/content-type.less
+++ b/frontend/source/less/components/content-type.less
@@ -6,6 +6,11 @@
     text-transform: lowercase;
     text-align: center;
 
+    @media @screen-sm-max {
+        font-size: @font-small;
+        line-height: @line-height--small;
+    }
+
     article & {
         text-align: left;
     }
