--- a/frontend/source/less/components/readmore.less
+++ b/frontend/source/less/components/readmore.less
@@ -15,6 +15,11 @@
 
     transition: @trans-normal-material;
 
+    @media @screen-sm-max {
+        font-size: @font-extra-small;
+        width: 8rem;
+    }
+
     &:hover {
         background-color: @color-primary-dark;
     }
