--- a/frontend/source/less/modules/carousel.less
+++ b/frontend/source/less/modules/carousel.less
@@ -65,7 +65,10 @@
 			    @media @screen-md-max {
 			    	top: 12rem;
 			    }
-
+		        @media @screen-sm-max {
+		            font-size: @font-small;
+		            line-height: @line-height--small;
+		        }
     		}
     		
     		.item__title {
