--- a/frontend/source/less/modules/content-info.less
+++ b/frontend/source/less/modules/content-info.less
@@ -11,6 +11,11 @@
         font-size: @font-small;
         line-height: @line-height--small;
 
+        @media @screen-sm-max {
+            //flex-direction: column;
+            font-size: @font-extra-small;
+        }
+
         &.__person {
             flex-direction: column;
             margin-top: 6rem;
@@ -57,10 +62,12 @@
             }
 
             @media @screen-sm-max {
-                width: 8rem;
+                width: 6rem;
+                margin-bottom: 1rem;
                 img {
                     width: 5rem;
                     height: 5rem;
+                    margin-left: 0;
                 }
             }
         }
@@ -90,6 +97,9 @@
         .content-info__related {
             border-left: 0.1rem solid @color-grey--20;
             padding-left: 2rem;
+            @media @screen-sm-max {
+                padding-left: 1rem;
+            }
             li {
                 white-space: nowrap;
                 line-height: 2rem;
