--- a/frontend/source/less/modules/video.less
+++ b/frontend/source/less/modules/video.less
@@ -55,6 +55,11 @@
         line-height: @line-height--large;
         color: @color-grey--30;
         font-style: oblique;
+
+        @media @screen-sm-max {
+            font-size: @font-medium;
+            line-height: @line-height--medium;
+        }
     }
 
     p {
