new font sizes definition

--- a/frontend/source/less/components/content-type.less
+++ b/frontend/source/less/components/content-type.less
@@ -7,8 +7,7 @@
     text-align: center;
 
     @media @screen-sm-max {
-        font-size: @font-small;
-        line-height: @line-height--small;
+        .font(small);
     }
 
     article & {
