--- a/frontend/source/less/components/pager.less
+++ b/frontend/source/less/components/pager.less
@@ -8,7 +8,7 @@
         display: inline;
         list-style: none;
         font-family: @font-secondary;
-        font-size: @font-small;
+        .font(small);
         
         a, span {
             display: inline-block;
