--- a/frontend/source/less/core/base.less
+++ b/frontend/source/less/core/base.less
@@ -39,8 +39,7 @@ body {
     min-height: 100%;
     margin: 0;
     font-family: @font;
-    font-size: @font-medium;
-    line-height: @line-height--medium;
+    .font(medium);
     color: black;
     background-color: white;
     overflow-y: scroll;
