--- a/frontend/source/less/layout/footer.less
+++ b/frontend/source/less/layout/footer.less
@@ -3,12 +3,13 @@
     min-height: 8rem;
     background-color: @color-grey;
 	padding: 3rem 0 1rem 0;
+	
+	.font(medium);
 	font-family: @font-secondary;
 	text-transform: uppercase;
 
 	.footer-inner {
-		line-height: @line-height--medium;
-		font-size: @font-small;
+		line-height: 3.2rem;
 		margin-bottom: 3rem;
 
 		@media @screen-sm-max {
@@ -16,6 +17,7 @@
 			min-height: auto;
 			padding-top: 0.2rem;
 			margin-top: 1rem;
+			.font(base);
 		}
 
 		.footer__navigation {
@@ -23,10 +25,10 @@
 		}
 
 		.footer__link {
+			font-family: @font-tertiary;
 			color: @color-grey--20;
-			font-size: @font-small;
 			text-decoration: none;
-			font-weight: 200;
+			//font-weight: 200;
 
 			&:hover {
 				text-decoration: underline;
@@ -35,6 +37,7 @@
 		}
 
 		strong {
+			.font(small);
 			color: black;
 		}
 
