--- a/frontend/source/less/layout/header.less
+++ b/frontend/source/less/layout/header.less
@@ -38,9 +38,9 @@
             display: block;
         }
 
+        .font(extra-small);
 		text-align: right;
 		font-family: @font-secondary;
-		font-size: @font-extra-small;
 		text-transform: uppercase;
 	    letter-spacing: 0.3rem;
 		color: white;
