--- a/frontend/source/less/layout/overlay.less
+++ b/frontend/source/less/layout/overlay.less
@@ -61,13 +61,13 @@
 
 
     h2 {
-        margin: 6rem 0 0 0;
-        color: white;
+        .font(extra-small);
         font-family: @font-secondary;
         text-transform: uppercase;
         text-align: center;
-        font-size: @font-extra-small;
         letter-spacing: 0.2rem;
+        color: white;
+        margin: 6rem 0 0 0;
     }
 
     .collections {
@@ -77,16 +77,23 @@
 		    	margin: 6rem 0;
 
 		    	em {
+                    .font(small);
 			        font-family: @font-secondary;
-		    		font-size: @font-small;
 		    		display: block;
 		    		margin: 0 0 1rem 0;
 		    		color: @color-primary;
 		    	}
 		    	h3 {
-		    		color: @color-grey;
-		    		font-size: @font-title-small;
+		    		.font(title-small);
+                    color: @color-grey;
 		    		font-weight: normal;
+
+                    a {
+                        text-decoration: none;
+                        &:hover {
+                            border-bottom: 0.2rem solid white;
+                        }
+                    }
 
 		    	}
 		    }
@@ -104,7 +111,8 @@
 		display: inline;
 		list-style: none;
 		font-family: @font-secondary;
-		font-size: @font-small;
+		.font(small);
+
 		a {
 			display: inline-block;
 			margin: 1rem 0.2rem;
@@ -118,6 +126,7 @@
 			&:hover {
 				color: white;
 				background-color: @color-primary; 
+                text-decoration: none;
 				border-color: @color-primary;
 			}
 		}
@@ -129,12 +138,20 @@
 		ul.items {
 			list-style: none;
 			text-align: center;
-			li {
+			
+            li {
 				list-style: none;
 				display: inline;
-				font-size: @font-title-small;
-				line-height: @line-height--title-normal;
+				
+                .font(title-small);
 				margin: 2rem;
+
+                a {
+                    text-decoration: none;
+                    &:hover {
+                        border-bottom: 0.2rem solid white;
+                    }
+                }
 			}
 		}
 	}
