--- a/frontend/source/less/components/readmore.less
+++ b/frontend/source/less/components/readmore.less
@@ -1,9 +1,9 @@
 .read-more {
     background-color: @color-primary;
-    color: white;
     font-family: @font-secondary;
-    font-size: @font-small;
-    line-height: @line-height--large;
+    color: white;
+    .font(small);
+    line-height: 3.2rem;
     
     text-transform: uppercase;
     text-align: center;
@@ -16,7 +16,7 @@
     transition: @trans-normal-material;
 
     @media @screen-sm-max {
-        font-size: @font-extra-small;
+        .font(extra-small);
         width: 8rem;
     }
 
