--- a/frontend/source/less/components/tags.less
+++ b/frontend/source/less/components/tags.less
@@ -1,8 +1,8 @@
 .tags {
     list-style: none;
-    
+
+    .font(medium);
     font-family: @font-tertiary;
-    font-size: @font-medium;
     color: @color-secondary;
     text-transform: uppercase;
     text-align: center;
@@ -10,16 +10,16 @@
     margin: 4rem 0;
 
     @media @screen-sm-max {
-        font-size: @font-small;
+        .font(small);
     }
     
     .content-info & {
+        text-align: left;
         margin: 0;
-        font-size: @font-small;
+        .font(small);
         
         @media @screen-sm-max {
-            font-size: @font-extra-small;
-            text-align: left;
+            .font(extra-small);
         }
     }
 
