--- a/frontend/source/less/modules/carousel.less
+++ b/frontend/source/less/modules/carousel.less
@@ -55,9 +55,9 @@
     			top: 22rem;
     			left: 0;
 		        
+		        .font(medium);
 		        color: @color-primary;
 		        font-family: @font-secondary;
-		        font-size: @font-medium;
 		        font-style: italic;
 		        text-transform: lowercase;
 		        text-align: center;
@@ -66,8 +66,7 @@
 			    	top: 12rem;
 			    }
 		        @media @screen-sm-max {
-		            font-size: @font-small;
-		            line-height: @line-height--small;
+		            .font(small);
 		        }
     		}
     		
@@ -75,22 +74,19 @@
     			width: 100%;
 		        padding: 0 8rem;
 
+		        .font(title-main);
 		        color: white;
-		        font-size: @font-title-normal;
-		        line-height: @line-height--title-normal;
 		        text-align: center;
 		        font-weight: normal;
 		        text-shadow: 0.1rem 0.1rem 0.2rem @color-grey--50;
 
 			    @media @screen-md-max {
+			    	.font(title-normal);
 			    	padding: 0 5rem;
-			    	font-size: @font-title-small;
-			    	line-height: @line-height--large;
 			    }
 			    @media @screen-sm-max {
+			    	.font(title-extra-small);
 			    	padding: 0 3rem;
-			    	font-size: @font-title-extra-small;
-			    	//line-height: @line-height--large;
 			    }
 		        
 		        a {
