--- a/frontend/source/less/modules/content-info.less
+++ b/frontend/source/less/modules/content-info.less
@@ -8,12 +8,11 @@
 
         font-family: @font-tertiary;
         letter-spacing: .1rem;
-        font-size: @font-small;
-        line-height: @line-height--small;
+        .font(small);
 
         @media @screen-sm-max {
             //flex-direction: column;
-            font-size: @font-extra-small;
+            .font(extra-small);
         }
 
         &.__person {
@@ -35,18 +34,16 @@
                 }
             }
             p.content-info__text {
+                .font(small);
                 display: block;
                 margin-top: 1rem;
                 font-family: @font;
-                font-size: @font-small;
-                line-height: @line-height--small;
             }
         }
 
         .content-info__title {
+            .font(title-small);
             color: @color-grey--50;
-            font-size: @font-title-small;
-            line-height: @line-height--title-small;
             font-weight: normal;            
         }
 
