--- a/frontend/source/less/modules/content-related.less
+++ b/frontend/source/less/modules/content-related.less
@@ -7,8 +7,7 @@
         font-style: italic;
         text-transform: lowercase;
 
-        font-size: @font-medium;
-        line-height: @line-height--medium;
+        .font(medium);
 
         &.__images,
         &.__video {
@@ -18,8 +17,7 @@
 
     .content-related__list {
         font-family: @font-tertiary;
-        font-size: @font-small;
-        line-height: @line-height--small;
+        .font(small);
 
         list-style: none;
 
