collection page, video item in list

--- a/frontend/source/less/components/tags.less
+++ b/frontend/source/less/components/tags.less
@@ -3,6 +3,7 @@
 
     .font(medium);
     font-family: @font-tertiary;
+    letter-spacing: .1rem;
     color: @color-secondary;
     text-transform: uppercase;
     text-align: center;
