--- a/frontend/source/less/modules/video.less
+++ b/frontend/source/less/modules/video.less
@@ -34,7 +34,7 @@
     }
 
     .title {
-        .font(title-small);
+        .font(title-normal);
         color: @color-grey--50;
         font-weight: normal;
         margin: 2rem 0 3rem 0;
