--- a/frontend/source/less/styles.less
+++ b/frontend/source/less/styles.less
@@ -25,6 +25,7 @@
 // Components
 // -------------------------------
 @import "components/content-type";
+@import "components/heading";
 @import "components/readmore";
 @import "components/pager";
 @import "components/selector";
