--- a/frontend/source/pug/layout/navigation.pug
+++ b/frontend/source/pug/layout/navigation.pug
@@ -16,7 +16,7 @@ nav.navigation
                 select( id="filter" name="filter" data-select-filter )
                     option( value="list.html" selected=(selected === 'all') ) All
                     option( value="article.html" selected=(selected === 'articles') ) Articles
-                    option( value="video.html" selected=(selected === 'videos') ) Videos
+                    option( value="videos.html" selected=(selected === 'videos') ) Videos
                     option( value="pictures" ) Pictures
                     option( value="files" ) Files
                     //option( value="collections" ) Collections
