--- a/frontend/source/pug/layout/overlay.pug
+++ b/frontend/source/pug/layout/overlay.pug
@@ -29,27 +29,27 @@
                     li 
                         em Anna Devon
                         h3 
-                            a( href="#" ) So called gun safety
+                            a( href="collection.html" ) So called gun safety
                     li
                         em Mike Lanning
                         h3 
-                            a( href="#" ) There’s no such thing as free beer
+                            a( href="collection.html" ) There’s no such thing as free beer
                     li
                         em Kurt Geiger
                         h3 
-                            a( href="#" ) The right to be offended
+                            a( href="collection.html" ) The right to be offended
                     li
                         em Fran Fanny
                         h3 
-                            a( href="#" ) East-west parallels
+                            a( href="collection.html" ) East-west parallels
                     li
                         em Lady Gaga
                         h3 
-                            a( href="#" ) Confusing unrealities
+                            a( href="collection.html" ) Confusing unrealities
                     li
                         em Mister X
                         h3 
-                            a( href="#" ) Now I’m out of collection titles
+                            a( href="collection.html" ) Now I’m out of collection titles
 
             .col-md-2
                 a.close( href="#close" title="Close" data-select-results-close="close" )
