--- a/frontend/source/pug/list.pug
+++ b/frontend/source/pug/list.pug
@@ -7,11 +7,11 @@ prepend variables
 
 append main
 
-    .container
+    section.container
         .row
             .col-md-2
             .col-md-8
-                .content
+                article.content
                     .content-type Article
                     h2.title 
                         a( href="article.html" ) NRA and Smith &amp; Wesson Partner to "Share the Safety" With All Americans
@@ -35,7 +35,7 @@ append main
         .row
             .col-md-2
             .col-md-8
-                .content
+                article.content
                     .content-type Article
                     h2.title 
                         a( href="article.html" ) Nuit Debout
