--- a/frontend/source/pug/person.pug
+++ b/frontend/source/pug/person.pug
@@ -7,12 +7,12 @@ prepend variables
 
 append main
 
-    .container
+    section.container
         .row
             .col-md-2
             .col-md-8
                 
-                article.__person
+                .__person
                     .content-info.__person
                         .row
                             .col-md-2
@@ -27,7 +27,7 @@ append main
         .row
             .col-md-2
             .col-md-8
-                .content
+                article.content
                     .content-type Article
                     h2.title 
                         a( href="article.html" ) NRA and Smith &amp; Wesson Partner to "Share the Safety" With All Americans
@@ -51,7 +51,7 @@ append main
         .row
             .col-md-2
             .col-md-8
-                .content
+                article.content
                     .content-type Article
                     h2.title 
                         a( href="article.html" ) Nuit Debout
