--- a/frontend/source/pug/video.pug
+++ b/frontend/source/pug/video.pug
@@ -7,7 +7,7 @@ prepend variables
 
 append main
 
-    .container.__video
+    article.container.__video
         .row
             .col-md-10.col-md-offset-1
                 .video
