--- a/frontend/source/pug/videos.pug
+++ b/frontend/source/pug/videos.pug
@@ -7,11 +7,11 @@ prepend variables
 
 append main
 
-    .container
+    section.container
         .row
             .col-md-2
             .col-md-8
-                .content.__video
+                article.content.__video
                     .content-type Video
                     h2.title 
                         a( href="video.html" ) Lol cats in the kitchen
@@ -51,7 +51,7 @@ append main
         .row
             .col-md-2
             .col-md-8
-                .content.__video
+                article.content.__video
                     .content-type Video
                     h2.title 
                         a( href="video.html" ) Nuit Debout
