--- a/frontend/source/less/modules/article.less
+++ b/frontend/source/less/modules/article.less
@@ -1,4 +1,4 @@
-article {
+.article {
     
     a {
         color: @color-primary;
@@ -11,9 +11,9 @@ article {
 
     .title {
         .font(title-normal);
-        margin: 2rem 0 3rem 0;
         color: @color-grey--50;
         font-weight: normal;
+        margin: 2rem 0 3rem 0;
 
         @media @screen-sm-max {
             .font(title-extra-small);
@@ -21,10 +21,10 @@ article {
     }
     
     p.intro {
-        margin: 0 0 4rem 10rem;
         .font(large);
         color: @color-grey--30;
         font-style: oblique;
+        margin: 0 0 4rem 10rem;
 
         @media @screen-sm-max {
             .font(medium);
