--- a/frontend/source/pug/article.pug
+++ b/frontend/source/pug/article.pug
@@ -7,45 +7,46 @@ prepend variables
 
 append main
 
-    .container
+    article.container
         .row
             .col-md-2
             .col-md-8
                 
-                article
-                    .content-type Article
-                    h2.title NRA and Smith &amp; Wesson Partner to "Share the Safety" With All Americans
-                
-                    .content-info
-                        .content-info__image
-                            img( src='styles/images/portrait-eric.png' alt="Eric Cattenberg" )
-                        .content-info__text
-                            .author 
-                                a(href="person.html") Eric Cattenberg
-                            .date November 25, 2016
-                            +tags({
-                                    tag: 'Activism',
-                                    url: 'list.html'
-                                }, {
-                                    tag: 'The Yesmen',
-                                    url: 'list.html'
-                                }, {
-                                    tag: 'Performance',
-                                    url: 'list.html'
-                                }, {
-                                    tag: 'Firearms',
-                                    url: 'list.html'
-                                })
-                        .content-info__related
-                            ul
-                                li
-                                    a( href="#files" ) 3 files
-                                li
-                                    a( href="#links" ) 4 links
-                                li
-                                    a( href="#videos" ) 1 video
-                                li
-                                    a( href="#images" ) 4 images
+                .article
+                    header
+                        .content-type Article
+                        h2.title NRA and Smith &amp; Wesson Partner to "Share the Safety" With All Americans
+                    
+                        .content-info
+                            .content-info__image
+                                img( src='styles/images/portrait-eric.png' alt="Eric Cattenberg" )
+                            .content-info__text
+                                .author 
+                                    a(href="person.html") Eric Cattenberg
+                                .date November 25, 2016
+                                +tags({
+                                        tag: 'Activism',
+                                        url: 'list.html'
+                                    }, {
+                                        tag: 'The Yesmen',
+                                        url: 'list.html'
+                                    }, {
+                                        tag: 'Performance',
+                                        url: 'list.html'
+                                    }, {
+                                        tag: 'Firearms',
+                                        url: 'list.html'
+                                    })
+                            .content-info__related
+                                ul
+                                    li
+                                        a( href="#files" ) 3 files
+                                    li
+                                        a( href="#links" ) 4 links
+                                    li
+                                        a( href="#videos" ) 1 video
+                                    li
+                                        a( href="#images" ) 4 images
 
                     p.intro Simi Valley, Ca. - The NRA announced today, at the Ronald Reagan Presidential Library, a new program to get guns into the hands of statistically under-armed Americans—from homosexuals to the elderly to besieged urban communities—and make self-defense, rather than gun control, the protection of choice for all Americans.
 
@@ -55,7 +56,7 @@ append main
 
             .col-md-2
         
-        section#links.content-related
+        aside#links.content-related
             .row
                 .col-md-2
                 .col-md-8
@@ -68,7 +69,7 @@ append main
                             a( href="https://nrapress.org" ) https://nrapress.org
                 .col-md-2
         
-        section#files.content-related
+        aside#files.content-related
             .row
                 .col-md-2
                 .col-md-8
@@ -79,27 +80,27 @@ append main
                 .col-md-2
 
 
-        section#videos.content-related
+        aside#videos.content-related
             .row
                 .col-md-10.col-md-offset-2 
                     h4.content-related__title.__video Video
             .row
                 .col-md-11.col-md-offset-1
-                    ul.content-related__list
+                    ul.content-related__list.__video
                         li 
                             a.content-related__image(href="video.html")
                                 .content-related__image-bg( style="background-image: url(styles/images/Share_the_Security.jpg)" )
                                 span Video description
 
         
-        section#images.content-related
+        aside#images.content-related
             .row
                 .col-md-10.col-md-offset-2 
                     h4.content-related__title.__images Images
             .row
                 .col-md-11.col-md-offset-1
 
-                    ul.content-related__list
+                    ul.content-related__list.__images
                         li 
                             a.content-related__image(href="#")
                                 .content-related__image-bg( style="background-image:url(styles/images/lol-cat.png)" )
