--- a/frontend/source/pug/index.pug
+++ b/frontend/source/pug/index.pug
@@ -8,7 +8,7 @@ prepend variables
 append main
     .heading.___hidden
         h1 Tactical Media Files homepage
-    .carousel
+    section.carousel
         +carousel({
                 title : 'The Manifesto of John Doe: The Revolution Will Be Digitized', 
                 type : 'video', 
@@ -31,11 +31,11 @@ append main
                 image: 'styles/images/occupy-sandy-banner-we-the-people.jpg'
             })
 
-    .container
+    section.container
         .row
             .col-md-2
             .col-md-8
-                .content
+                article.content
                     .content-type Article
                     h2.title 
                         a( href="article.html" ) NRA and Smith &amp; Wesson Partner to "Share the Safety" With All Americans
@@ -60,7 +60,7 @@ append main
         .row
             .col-md-2
             .col-md-8
-                .content
+                article.content
                     .content-type Article
                     h2.title 
                         a( href="article.html" ) Nuit Debout
