headings, sections, flex for aligning read-more

--- a/frontend/source/pug/collection.pug
+++ b/frontend/source/pug/collection.pug
@@ -54,7 +54,7 @@ append main
                         a( href="video.html" ) Lol cats in the kitchen
                     .content__video-still
                         a( href="video.html" )
-                            img( src='styles/images/Share_the_Security.jpg' )
+                            img( src='styles/images/Share_the_Security.jpg' width="640" )
                             .read-more.__play(  ) Play
                     
                     p.intro Nuit Debout is a French social movement that began on March 31, 2016, arising out of protests against proposed neoliberal labor reforms known as the "Loi Travail," or the "El Khomri Law".
