--- a/frontend/source/less/modules/content.less
+++ b/frontend/source/less/modules/content.less
@@ -34,7 +34,9 @@
 
         .content__video-still {
             position: relative;
-
+            display: flex;
+            justify-content: center;
+            
             img {            
                 max-width: 100%;
                 margin: 0 auto;
@@ -43,10 +45,12 @@
             .read-more {
                 position: absolute;
                 bottom: 6rem;
-                left: 50% - 9rem;
 
-                @media @screen-md-max {
-                    left: 50% - 8rem;
+                @media @screen-sm-max {
+                    bottom: 0rem;
+                }
+                @media @screen-xs-max {
+                    bottom: 0.5rem;
                 }
             }
 
@@ -57,19 +61,4 @@
         }
     }
 
-    // .content__video {
-    //     position: relative;
-
-    //     video {
-    //         width: 100%;
-    //         //height: 36rem;
-    //     }
-
-    //     .read-more {
-    //         position: absolute;
-    //         bottom: 6rem;
-    //         left: 50% - 9rem;
-    //     }
-
-    // }
 }
