--- a/frontend/source/less/modules/video.less
+++ b/frontend/source/less/modules/video.less
@@ -10,27 +10,35 @@
     
     .video-background {
         background-color: black;
-        width: 100%;
+        
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
         video {
             width: 100%;
+            height: auto;
 
-            display: block;
-            margin: 0 auto;
             background-size: cover;
             background-position: center;
             background-repeat: none;
         }
 
-    }
-
-    a {
-        color: @color-primary;
-
-        &:hover, 
-        &:active {
-            text-decoration: underline;
+        .read-more {
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 8rem;
+            
+            @media @screen-md-max {
+                bottom: 4rem;
+            }
+            @media @screen-sm-max {
+                bottom: 2rem;
+            }
         }
+
     }
 
     .title {
