--- a/frontend/source/pug/article.pug
+++ b/frontend/source/pug/article.pug
@@ -15,11 +15,11 @@ append main
                 .article
                     header
                         .content-type Article
-                        h2.title NRA and Smith &amp; Wesson Partner to "Share the Safety" With All Americans
+                        h1.title NRA and Smith &amp; Wesson Partner to "Share the Safety" With All Americans
                     
                         .content-info
                             .content-info__image
-                                img( src='styles/images/portrait-eric.png' alt="Eric Cattenberg" )
+                                img( src='styles/images/portrait-eric.png' alt="Eric Cattenberg" width="240" )
                             .content-info__text
                                 .author 
                                     a(href="person.html") Eric Cattenberg
@@ -52,12 +52,15 @@ append main
 
                     p This text is set in 21px, line height 33px. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim #[a(href="#") veniam], quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                     
+                    h2 Et harum quidem rerum facilis
                     p Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta #[a(href="#") nobis est eligendi] optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
+                    h3 Et harum quidem rerum facilis est et expedita distinctio 
+                    p Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cumque nihil. 
 
             .col-md-2
         
-        aside#links.content-related
-            .row
+        aside
+            #links.content-related.row
                 .col-md-2
                 .col-md-8
 
@@ -68,9 +71,8 @@ append main
                         li
                             a( href="https://nrapress.org" ) https://nrapress.org
                 .col-md-2
-        
-        aside#files.content-related
-            .row
+            
+            #files.content-related.row
                 .col-md-2
                 .col-md-8
                     h4.content-related__title Files
@@ -80,11 +82,10 @@ append main
                 .col-md-2
 
 
-        aside#videos.content-related
-            .row
+            #videos.content-related.row
                 .col-md-10.col-md-offset-2 
                     h4.content-related__title.__video Video
-            .row
+            .content-related.row
                 .col-md-11.col-md-offset-1
                     ul.content-related__list.__video
                         li 
@@ -92,12 +93,11 @@ append main
                                 .content-related__image-bg( style="background-image: url(styles/images/Share_the_Security.jpg)" )
                                 span Video description
 
-        
-        aside#images.content-related
-            .row
+            
+            #images.content-related.row
                 .col-md-10.col-md-offset-2 
                     h4.content-related__title.__images Images
-            .row
+            .content-related.row
                 .col-md-11.col-md-offset-1
 
                     ul.content-related__list.__images
@@ -125,5 +125,4 @@ append main
                         //-     a.content-related__image(href="#")
                         //-         img( src='styles/images/lol-cat.png' )
                         //-         span Image description
-
 
