--- a/frontend/source/pug/list.pug
+++ b/frontend/source/pug/list.pug
@@ -6,7 +6,8 @@ prepend variables
     - selected = 'all';
 
 append main
-
+    .heading.___hidden
+        h1 Search results
     section.container
         .row
             .col-md-2
@@ -63,3 +64,43 @@ append main
 
             .col-md-2
 
+        .row
+            .col-md-2
+            .col-md-8
+                article.content.__video
+                    .content-type Video
+                    h2.title 
+                        a( href="video.html" ) Lol cats in the kitchen
+
+                    .content__video-still
+                        a( href="video.html" )
+                            img( src='styles/images/lol-cat.png' )
+                            .read-more.__play(  ) Play
+                    //- .content__video 
+                    //-     video( width="640" height="360" src="http://www.tacticalmediafiles.net/files/38/38889.38884.NRA_and_SW_Share_the_Safety.mp4" )
+                    //-     a.read-more( href="video.html" ) Play
+                    
+                    +tags({
+                            tag: 'Mess',
+                            url: 'list.html'
+                        },{
+                            tag: 'Fun',
+                            url: 'list.html'
+                        },{
+                            tag: 'Soft',
+                            url: 'list.html'
+                        },{
+                            tag: 'Cool Aid',
+                            url: 'list.html'
+                        },{
+                            tag: 'Precarity',
+                            url: 'list.html'
+                        },{
+                            tag: 'Art Of Campaigning',
+                            url: 'list.html'
+                        },{
+                            tag: 'Cure it',
+                            url: 'list.html'
+                        })
+                hr
+            .col-md-2
