--- a/frontend/source/pug/person.pug
+++ b/frontend/source/pug/person.pug
@@ -19,8 +19,8 @@ append main
                                 .content-type Person
                             .col-md-10
                                 .content-info__image
-                                    img( src='styles/images/portrait-eric.png' alt="Eric Cattenberg" )
-                                h2.content-info__title Eric Cattenberg
+                                    img( src='styles/images/portrait-eric.png' alt="Eric Cattenberg" width="240" )
+                                h1.content-info__title Eric Cattenberg
 
                         p.content-info__text Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta #[a(href="#") nobis est eligendi] optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
 
