--- a/frontend/source/pug/video.pug
+++ b/frontend/source/pug/video.pug
@@ -13,6 +13,7 @@ append main
                 .video
                     .video-background
                         video( style="background-image:url(styles/images/lol-cat.png)" )
+                        a.read-more.__play( href="video.html" ) Play
     .container
         .row
             .col-md-1
@@ -20,23 +21,94 @@ append main
                 .content-type Video
 
             .col-md-6
-                h2.title Cat sits in bathroom with liquor in the back and oh oh oh it’s so cute duh
-                
-                +tags({
-                        tag: 'Activism',
-                        url: 'list.html'
-                    }, {
-                        tag: 'The Yesmen',
-                        url: 'list.html'
-                    }, {
-                        tag: 'Performance',
-                        url: 'list.html'
-                    }, {
-                        tag: 'Firearms',
-                        url: 'list.html'
-                    })
+                header 
+                    h1.title Cat sits in bathroom with liquor in the back and oh oh oh it’s so cute duh
+                    
+                    +tags({
+                            tag: 'Activism',
+                            url: 'list.html'
+                        }, {
+                            tag: 'The Yesmen',
+                            url: 'list.html'
+                        }, {
+                            tag: 'Performance',
+                            url: 'list.html'
+                        }, {
+                            tag: 'Firearms',
+                            url: 'list.html'
+                        })
 
-                p.intro Simi Valley, Ca. - The NRA announced today, at the Ronald Reagan Presidential Library, a new program to get guns into the hands of statistically under-armed Americans—from homosexuals to the elderly to besieged urban communities—and make self-defense, rather than gun control, the protection of choice for all Americans.
-
+                    p.intro Simi Valley, Ca. - The NRA announced today, at the Ronald Reagan Presidential Library, a new program to get guns into the hands of statistically under-armed Americans—from homosexuals to the elderly to besieged urban communities—and make self-defense, rather than gun control, the protection of choice for all Americans.
+            
             .col-md-2
+
+        .row
+            .col-md-2
+            .col-md-8
+                p Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta #[a(href="#") nobis est eligendi] optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
+            .col-md-2
+
+        aside
+            #links.content-related.row
+                .col-md-2
+                .col-md-8
+
+                    h4.content-related__title Links
+                    ul.content-related__list
+                        li
+                            a( href="https://nrapress.org/articles/20160622/nra-smith-wesson-partner-share-the-safety/" ) https://nrapress.org/articles/20160622/nra-smith-wesson-partner-share-the-safety/
+                        li
+                            a( href="https://nrapress.org" ) https://nrapress.org
+                .col-md-2
+            
+            #files.content-related.row
+                .col-md-2
+                .col-md-8
+                    h4.content-related__title Files
+                    ul.content-related__list
+                        li
+                            a( href="#" ) filename.zip
+                .col-md-2
+
+
+            #videos.content-related.row
+                .col-md-10.col-md-offset-2 
+                    h4.content-related__title.__video Video
+            .content-related.row
+                .col-md-11.col-md-offset-1
+                    ul.content-related__list.__video
+                        li 
+                            a.content-related__image(href="video.html")
+                                .content-related__image-bg( style="background-image: url(styles/images/Share_the_Security.jpg)" )
+                                span Video description
+
+            
+            #images.content-related.row
+                .col-md-10.col-md-offset-2 
+                    h4.content-related__title.__images Images
+            .content-related.row
+                .col-md-11.col-md-offset-1
+
+                    ul.content-related__list.__images
+                        li 
+                            a.content-related__image(href="#")
+                                .content-related__image-bg( style="background-image:url(styles/images/lol-cat.png)" )
+                                span Image description
+                        li 
+                            a.content-related__image(href="#")
+                                .content-related__image-bg( style="background-image:url(styles/images/lol-cat.png)" )
+                                span Image description
+                        li 
+                            a.content-related__image(href="#")
+                                .content-related__image-bg( style="background-image:url(styles/images/lol-cat.png)" )
+                                span Image description
+                        li 
+                            a.content-related__image(href="#")
+                                .content-related__image-bg( style="background-image:url(styles/images/lol-cat.png)" )
+                                span Image description
+                        li 
+                            a.content-related__image(href="#")
+                                .content-related__image-bg( style="background-image:url(styles/images/lol-cat.png)" )
+                                span Image description
+
 
