--- a/frontend/source/pug/videos.pug
+++ b/frontend/source/pug/videos.pug
@@ -6,7 +6,8 @@ prepend variables
     - bodyClass = 'videos'
 
 append main
-
+    .heading.___hidden
+        h1 Videos
     section.container
         .row
             .col-md-2
@@ -14,12 +15,12 @@ append main
                 article.content.__video
                     .content-type Video
                     h2.title 
-                        a( href="video.html" ) Lol cats in the kitchen
+                        a( href="video.html" ) Lol cats in the kitchen!
 
                     .content__video-still
                         a( href="video.html" )
-                            img( src='styles/images/lol-cat.png' )
-                            .read-more.__play(  ) Play
+                            img( src='styles/images/lol-cat.png' width="640" )
+                        a.read-more.__play( href="video.html" ) Play
                     //- .content__video 
                     //-     video( width="640" height="360" src="http://www.tacticalmediafiles.net/files/38/38889.38884.NRA_and_SW_Share_the_Safety.mp4" )
                     //-     a.read-more( href="video.html" ) Play
@@ -58,8 +59,8 @@ append main
                     
                     .content__video-still
                         a( href="video.html" )
-                            img( src='styles/images/Share_the_Security.jpg' )
-                            .read-more.__play(  ) Play
+                            img( src='styles/images/Share_the_Security.jpg' width="640" )
+                        a.read-more.__play( href="video.html" ) Play
                     //- .content__video
                     //-     video( width="640" height="360" start="12" src="http://www.tacticalmediafiles.net/files/38/38889.38884.NRA_and_SW_Share_the_Safety.mp4" )
                     //-     a.read-more( href="video.html" ) Play
