--- a/frontend/source/less/layout/header.less
+++ b/frontend/source/less/layout/header.less
@@ -6,16 +6,22 @@
     align-items: center;
 
     height: 5rem;
-    width: 6.4rem;
-    padding: 0 0 .7rem 0;
+    width: 8rem;
+    padding: 1rem 0;
 
-    @media @screen-lg-max {
+    @media @screen-sm-max {
         width: 5rem;
     }
-    
+    @media @screen-md-max {
+        width: 6rem;
+    }
+    @media @screen-xl-max {
+        width: 6.7rem;
+    }
+
     .header__logo {
         img {
-            width: 7rem;
+            width: 10rem;
         }
     }
 
