--- a/frontend/source/less/modules/video.less
+++ b/frontend/source/less/modules/video.less
@@ -4,6 +4,7 @@
         &.__video {
             background-color: black;
             max-width: 100%;
+            padding: 0;
         }
     }
 
