--- a/frontend/source/pug/collection.pug
+++ b/frontend/source/pug/collection.pug
@@ -55,7 +55,7 @@ append main
                     .content__video-still
                         a( href="video.html" )
                             img( src='styles/images/Share_the_Security.jpg' width="640" )
-                            .read-more.__play(  ) Play
+                        a.read-more.__play( href="video.html" ) Play
                     
                     p.intro Nuit Debout is a French social movement that began on March 31, 2016, arising out of protests against proposed neoliberal labor reforms known as the "Loi Travail," or the "El Khomri Law".
                     
