--- a/frontend/source/pug/person.pug
+++ b/frontend/source/pug/person.pug
@@ -15,7 +15,7 @@ append main
                 .__person
                     .content-info.__person
                         .row
-                            .col-md-2
+                            .col-md-2.start-xs
                                 .content-type Person
                             .col-md-10
                                 .content-info__image
