--- a/frontend/source/pug/list.pug
+++ b/frontend/source/pug/list.pug
@@ -75,7 +75,7 @@ append main
                     .content__video-still
                         a( href="video.html" )
                             img( src='styles/images/lol-cat.png' )
-                            .read-more.__play(  ) Play
+                        a.read-more.__play( href="video.html" ) View
                     //- .content__video 
                     //-     video( width="640" height="360" src="http://www.tacticalmediafiles.net/files/38/38889.38884.NRA_and_SW_Share_the_Safety.mp4" )
                     //-     a.read-more( href="video.html" ) Play
