--- a/frontend/source/less/styles.less
+++ b/frontend/source/less/styles.less
@@ -3,7 +3,7 @@
 @import "core/base";
 @import "core/fonts";
 @import "core/grid";
-//@import "core/icons";
+@import "core/icons";
 @import "core/normalize";
 @import "core/typography";
 @import "core/variables";
@@ -20,6 +20,7 @@
 // Libraries
 // -------------------------------
 @import "lib/font-awesome/font-awesome";
+@import "lib/oiplayer";
 @import "lib/slick-slider";
 
 // Components
