--- a/frontend/source/pug/index.pug
+++ b/frontend/source/pug/index.pug
@@ -12,7 +12,7 @@ append main
         +carousel({
                 title : 'The Manifesto of John Doe: The Revolution Will Be Digitized', 
                 type : 'video', 
-                url : 'article.html', 
+                url : 'video.html', 
                 image: 'styles/images/ferguson_black_power_0814.jpg'
             }, {
                 title : 'NRA and Smith & Wesson Partner to "Share the Safety" With All Americans', 
